# SprachSchmiedeBot

./: .env.example  .gitignore  README.md  pyproject.toml
bot/: main.py
core/: config.py
