[project]
name = "sprachschmiedebot"
version = "0.1.0"
description = ""
authors = [
    {name = "Farzaneh",email = "farzanehnasrabadii@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "python-telegram-bot[rate-limiter,webhooks] (>=22.7,<23.0)",
    "sqlalchemy[asyncio] (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "redis (>=7.4.0,<8.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "python-i18n[pybabel] (>=0.3.9,<0.4.0)",
    "python-multipart (>=0.0.27,<0.0.28)",
    "pydantic (>=2.13.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "mypy (>=2.0.0,<3.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "ruff (>=0.15.12,<0.16.0)"
]
